--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
+    "firebase": "^11.6.0",
+    "framer-motion": "^12.6.2",
     "modern-normalize": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
-    "typewriter-effect": "^2.21.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
