--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@react-spring/web": "^9.7.5",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "firebase": "^11.6.0",
@@ -20,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.4.0",
     "yup": "^1.6.1"
   },
