--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.4.0",
     "yup": "^1.6.1"
   },
